@@ -1,41 +1,9 @@
-//package com.example.matrimony.config;
-//
-//import java.util.List;
-//
-//import org.springframework.context.annotation.Bean;
-//import org.springframework.context.annotation.Configuration;
-//import org.springframework.messaging.simp.config.MessageBrokerRegistry;
-//import org.springframework.web.cors.CorsConfiguration;
-//import org.springframework.web.cors.CorsConfigurationSource;
-//import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
-//
-//@Configuration
-//public class WebConfig {
-//
-//	
-//	 @Bean
-//	    public CorsConfigurationSource corsConfigurationSource() {
-//	        CorsConfiguration config = new CorsConfiguration();
-//	        config.setAllowedOrigins(List.of("http://localhost:5173"));
-//	        config.setAllowedMethods(List.of("GET", "POST", "PUT", "DELETE", "OPTIONS"));
-//	        config.setAllowedHeaders(List.of("*"));
-//	        config.setAllowCredentials(true);
-//	      // <-- This is required for SockJS
-//
-//	        UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
-//	        source.registerCorsConfiguration("/**", config);
-//	        return source;
-//	    }
-//	
-//
-//	}
-//	
-//	
-//	
-
 package com.example.matrimony.config;
 
+import java.util.Arrays;
 import java.util.List;
+
+import org.springframework.beans.factory.annotation.Value;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
 import org.springframework.web.cors.CorsConfiguration;
@@ -45,29 +13,49 @@ import org.springframework.web.servlet.config.annotation.ResourceHandlerRegistry
 import org.springframework.web.servlet.config.annotation.WebMvcConfigurer;
 
 @Configuration
-
 public class WebConfig implements WebMvcConfigurer {
 
-    // ✅ CORS
+    // ===========================
+    // CORS CONFIGURATION
+    // ===========================
+
+    @Value("${app.cors.allowed-origins}")
+    private String allowedOrigins;
 
     @Bean
     public CorsConfigurationSource corsConfigurationSource() {
+
         CorsConfiguration config = new CorsConfiguration();
-        config.setAllowedOrigins(List.of("http://localhost:5173"));
-        config.setAllowedMethods(List.of("GET", "POST", "PUT", "DELETE", "OPTIONS"));
+
+        // Allow multiple origins (comma-separated)
+        config.setAllowedOrigins(Arrays.asList(allowedOrigins.split(",")));
+
+        config.setAllowedMethods(
+                List.of("GET", "POST", "PUT", "DELETE", "OPTIONS")
+        );
+
         config.setAllowedHeaders(List.of("*"));
         config.setAllowCredentials(true);
-        UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
-        source.registerCorsConfiguration("/**", config); // <-- Use /** instead of /
+
+        UrlBasedCorsConfigurationSource source =
+                new UrlBasedCorsConfigurationSource();
+
+        source.registerCorsConfiguration("/**", config);
+
         return source;
-        
     }
-    // ✅ THIS PART IS REQUIRED TO SERVE IMAGES
+
+    // ===========================
+    // STATIC FILE (IMAGE) SERVING
+    // ===========================
+
+    @Value("${app.upload.profile-photos-path}")
+    private String profilePhotosPath;
 
     @Override
     public void addResourceHandlers(ResourceHandlerRegistry registry) {
-        registry.addResourceHandler("/profile-photos/**")
-                .addResourceLocations("file:uploads/profile-photos/");
 
+        registry.addResourceHandler("/profile-photos/**")
+                .addResourceLocations("file:" + profilePhotosPath);
     }
 }
